# genteel

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  add_test.patch  audit_tool.py  bench  bench.rs  benches2  benches2.rs  benchmark_regex.py  benchmark_results.txt  fix.py  fix_params.py  fix_test.py  fix_z80_mod.py  fix_z80_mod_v2.py  full_main.rs  gdb_bench  gdb_bench.rs  gen_slots.py  gui_config.json  mask_test  mask_test.rs  mock_test  patch.diff  patch.py  patch.rs  patch.sh  patch_script.py  repro_standalone  reproduce_inc_dec  reproduce_issue  run_test.patch  sonic_test.txt  split_tests.py  test2  test2.rs  (+26 more)
.github/workflows/: release.yml
audit_reports/: EXECUTIVE_SUMMARY.md  FINDINGS.md  RISK_REGISTER.csv  findings.json  metrics.json  test_output.txt
audit_reports/remediations/: 001_fixes.patch  cleanup_artifacts.sh
benches/: gui_bench.rs  gui_texture_clone.rs
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/file_menu_enhancements_20260301/: index.md  spec.md
conductor/tracks/debugging_suite_20260301/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/file_menu_enhancements_20260301/: metadata.json  plan.md
conductor/tracks/rendering_audio_20260220/: index.md  metadata.json  plan.md  spec.md
docs/: hardware_documentation.md  input_scripting.md  ym2612_spec.md  ym2612_state_machines.md  z80_opcodes.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bus_shared.rs  m68k_arithmetic.rs  m68k_control.rs  m68k_random.rs  memory_ops.rs  vdp_control.rs  vdp_data.rs  vdp_render.rs  z80_flags.rs  z80_fuzz.rs  z80_memory.rs  z80_prefix.rs  z80_random_program.rs  z80_smart.rs
proptest-regressions/memory/: tests_property.txt
proptest-regressions/vdp/: tests_dma_helpers.txt
proptest-regressions/z80/: proptest_expanded.txt  tests_ex_sp_hl_expanded.txt
scripts/: README.md  audit.py  audit_tool.py  benchmark_audit_regex.py  benchmark_regex.py  generate_builds.py
src/: audio.rs  benches_gui.rs  frontend.rs  gui.rs  input.rs  lib.rs  main.rs  main.rs.orig  main.rs.rej  main.rs_perf_test.rs  tests_gui.rs  wav_writer.rs
src/apu/: blip_buf.rs  mod.rs  psg.rs  sn76489.rs  tests_psg_expansion.rs  tests_ym2612_expansion.rs  ym2612.rs
src/cpu/: addressing.rs  bench_decoder.rs  bench_step.rs  decoder.rs  instructions.rs  mod.rs  test_utils.rs  tests_addressing.rs  tests_bug_fixes.rs  tests_cache.rs  tests_decoder_bit.rs  tests_decoder_shift.rs  tests_interrupts.rs  tests_m68k_alu.rs  tests_m68k_bcd.rs  tests_m68k_bits.rs  tests_m68k_comprehensive.rs  tests_m68k_control.rs  tests_m68k_data.rs  tests_m68k_data_unit.rs  tests_m68k_exhaustive.rs  tests_m68k_extended.rs  tests_m68k_movep.rs  tests_m68k_shift.rs  tests_m68k_torture.rs  tests_performance.rs  tests_security.rs
src/cpu/ops/: arithmetic.rs  bits.rs  data.rs  mod.rs  system.rs
src/debugger/: gdb.rs  mod.rs
src/io/: mod.rs
src/memory/: bus.rs  byte_utils.rs  mod.rs  tests_bus_refactor.rs  tests_bus_safety.rs  tests_bus_vdp.rs  tests_debug.rs  tests_performance.rs  tests_property.rs  tests_rom_access.rs  z80_bus.rs
src/vdp/: bench_dma.rs  bench_render.rs  constants.rs  dma.rs  mod.rs  render.rs  test_command.rs  test_repro_white_screen.rs  tests_bulk_write.rs  tests_control.rs  tests_decode_plane_size.rs  tests_dma.rs  tests_dma_helpers.rs  tests_draw_row_refactor.rs  tests_getters.rs  tests_properties.rs  tests_read.rs  tests_render.rs  tests_security.rs
src/z80/: macros.rs  mod.rs  op_cb.rs  op_ed.rs  op_general.rs  op_index.rs  proptest_expanded.rs  proptest_tests.rs  test_utils.rs  tests.rs  tests_alu.rs  tests_block.rs  tests_cb.rs  tests_control.rs  tests_daa.rs  tests_ddcb.rs  tests_ed_ix.rs  tests_ex_sp_hl_expanded.rs  tests_exhaustive.rs  tests_gaps.rs  tests_halfcarry.rs  tests_interrupt.rs  tests_load.rs  tests_memptr.rs  tests_regression.rs  tests_reset.rs  tests_rrd_rld.rs  tests_state.rs  tests_timing.rs  tests_torture.rs  tests_undoc.rs
tests/: bench_audio.rs  bench_execution.rs  test_audit_regex.py  test_audit_regex_performance.py  verify_gdb_breakpoints.rs
