[package]
name = "genteel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1"

# Pure Rust windowing, rendering, and audio
winit = { version = "0.29", features = ["rwh_05"] }
pixels = "0.14"
cpal = "0.15"

[dev-dependencies]
proptest = "1.0"
