[package]
name = "genteel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui"]
gui = ["dep:cpal", "dep:winit", "dep:pixels", "dep:egui", "dep:egui-winit", "dep:egui-wgpu", "dep:rodio"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.1"

# Pure Rust windowing, rendering, and audio
winit = { version = "0.29", features = ["rwh_05"], optional = true }
pixels = { version = "0.15", optional = true }
cpal = { version = "0.15", optional = true }
rodio = { version = "0.17", optional = true }
rand = "0.10.0"

# GUI
egui = { version = "0.26", optional = true }
egui-winit = { version = "0.26", optional = true, default-features = false, features = ["links"] }
egui-wgpu = { version = "0.26", optional = true }

[dev-dependencies]
proptest = "1.0"
