[package]
name = "genteel-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.genteel]
path = ".."

[[bin]]
name = "memory_ops"
path = "fuzz_targets/memory_ops.rs"
test = false
doc = false

[[bin]]
name = "bus_shared"
path = "fuzz_targets/bus_shared.rs"
test = false
doc = false

[[bin]]
name = "m68k_arithmetic"
path = "fuzz_targets/m68k_arithmetic.rs"
test = false
doc = false

[[bin]]
name = "m68k_control"
path = "fuzz_targets/m68k_control.rs"
test = false
doc = false

[[bin]]
name = "m68k_random"
path = "fuzz_targets/m68k_random.rs"
test = false
doc = false

[[bin]]
name = "vdp_control"
path = "fuzz_targets/vdp_control.rs"
test = false
doc = false

[[bin]]
name = "vdp_data"
path = "fuzz_targets/vdp_data.rs"
test = false
doc = false

[[bin]]
name = "vdp_render"
path = "fuzz_targets/vdp_render.rs"
test = false
doc = false

